Fix: loader alignment

--- a/src/components/frame/LoadingTemplate/LoadingTemplate.css
+++ b/src/components/frame/LoadingTemplate/LoadingTemplate.css
@@ -2,6 +2,7 @@
   composes: stretchVertical stretchHorizontal from '~styles/layout.css';
   position: absolute;
   top: 0;
+  left: 0;
   overflow: auto;
   background: var(--gradient-default);
 }
